<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.Bridge"
    tools:context=".AddShop">



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:theme="@android:style/Theme.Material">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/logs"
                android:theme="@android:style/Theme.Material" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_field_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:hint="@string/email"
                android:textColor="@color/colorPrimaryBlack"
                android:textColorHint="@color/colorPrimarygreen"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/colorPrimarygreen"
                app:errorEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:textColor="@color/colorPrimaryBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Password_field_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/password"
                android:textColor="@color/colorPrimaryBlack"
                android:textColorHint="@color/colorPrimarygreen"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/colorPrimarygreen"
                app:errorEnabled="true"
                app:endIconMode="password_toggle">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryBlack"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_round"
                android:text="@string/login"
                android:textColor="@color/colorPrimarywhite"
                app:cornerRadius="50pt"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/forgot"
                android:gravity="center"
                android:textColor="@android:color/holo_green_dark"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sign_up_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
